include/grass/defs/gis.h

double G_area_of_polygon(const double *, const double *, int);
/* area_ellipse.c */
void G_begin_zone_area_on_ellipsoid(double, double, double);
double G_darea0_on_ellipsoid(double);
double G_area_for_zone_on_ellipsoid(double, double);
/* area_poly1.c */
void G_begin_ellipsoid_polygon_area(double, double);
double G_ellipsoid_polygon_area(const double *, const double *, int);
/* area_poly2.c */
double G_planimetric_polygon_area(const double *, const double *, int);
/* area_sphere.c */
void G_begin_zone_area_on_sphere(double, double);
double G_darea0_on_sphere(double);
double G_area_for_zone_on_sphere(double, double);
/* ascii_chk.c */
void G_ascii_check(char *);
/* asprintf.c */
/* Do it better if you know how */
/* asprintf is not found on MINGW but exists */

/*
 *  Because configure script in GDAL test is G_asprintf exists in gis lib
 *  the G_asprintf macro is disabled until a stable version of GDAL
 *  with a different function becomes widely used
 */
int G_vasprintf(char **, const char *, va_list);
int G_asprintf(char **, const char *, ...)
    __attribute__((format(printf, 2, 3)));
int G_rasprintf(char **, size_t *, const char *, ...)
    __attribute__((format(printf, 3, 4)));
/* aprintf.c */
int G_aprintf(const char *, ...);
int G_faprintf(FILE *, const char *, ...);
int G_saprintf(char *, const char *, ...);
int G_snaprintf(char *, size_t, const char *, ...);
int G_vaprintf(const char *, va_list);
int G_vfaprintf(FILE *, const char *, va_list);
int G_vsaprintf(char *, const char *, va_list);
int G_vsnaprintf(char *, size_t, const char *, va_list);
/* strlcat.c */
size_t G_strlcat(char *, const char *, size_t);
/* strlcpy.c */
size_t G_strlcpy(char *, const char *, size_t);
/* basename.c */
char *G_basename(char *, const char *);
size_t G_get_num_decimals(const char *);
char *G_double_to_basename_format(double, size_t, size_t);
char *G_get_basename_separator(void);
char *G_join_basename_strings(const char **, size_t);
char *G_generate_basename(const char *, double, size_t, size_t);
/* bres_line.c */
void G_bresenham_line(int, int, int, int, int (*)(int, int));
/* clicker.c */
void G_clicker(void);
/* color_rules.c */
char *G_color_rules_options(void);
char *G_color_rules_descriptions(void);
char *G_color_rules_description_type(void);
void G_list_color_rules(FILE *);