dist.x86_64-pc-linux-gnu/etc/python/grass/lib/gis.py


# include/grass/defs/gis.h: 107
if _libs["grass_gis.8.5"].has("G_area_of_polygon", "cdecl"):
    G_area_of_polygon = _libs["grass_gis.8.5"].get("G_area_of_polygon", "cdecl")
    G_area_of_polygon.argtypes = [POINTER(c_double), POINTER(c_double), c_int]
    G_area_of_polygon.restype = c_double

# include/grass/defs/gis.h: 110
if _libs["grass_gis.8.5"].has("G_begin_zone_area_on_ellipsoid", "cdecl"):
    G_begin_zone_area_on_ellipsoid = _libs["grass_gis.8.5"].get(
        "G_begin_zone_area_on_ellipsoid", "cdecl"
    )
    G_begin_zone_area_on_ellipsoid.argtypes = [c_double, c_double, c_double]
    G_begin_zone_area_on_ellipsoid.restype = None

# include/grass/defs/gis.h: 111
if _libs["grass_gis.8.5"].has("G_darea0_on_ellipsoid", "cdecl"):
    G_darea0_on_ellipsoid = _libs["grass_gis.8.5"].get("G_darea0_on_ellipsoid", "cdecl")
    G_darea0_on_ellipsoid.argtypes = [c_double]
    G_darea0_on_ellipsoid.restype = c_double

# include/grass/defs/gis.h: 112
if _libs["grass_gis.8.5"].has("G_area_for_zone_on_ellipsoid", "cdecl"):
    G_area_for_zone_on_ellipsoid = _libs["grass_gis.8.5"].get(
        "G_area_for_zone_on_ellipsoid", "cdecl"
    )
    G_area_for_zone_on_ellipsoid.argtypes = [c_double, c_double]
    G_area_for_zone_on_ellipsoid.restype = c_double

# include/grass/defs/gis.h: 115
if _libs["grass_gis.8.5"].has("G_begin_ellipsoid_polygon_area", "cdecl"):
    G_begin_ellipsoid_polygon_area = _libs["grass_gis.8.5"].get(
        "G_begin_ellipsoid_polygon_area", "cdecl"
    )
    G_begin_ellipsoid_polygon_area.argtypes = [c_double, c_double]
    G_begin_ellipsoid_polygon_area.restype = None

# include/grass/defs/gis.h: 116
if _libs["grass_gis.8.5"].has("G_ellipsoid_polygon_area", "cdecl"):
    G_ellipsoid_polygon_area = _libs["grass_gis.8.5"].get(
        "G_ellipsoid_polygon_area", "cdecl"
    )
    G_ellipsoid_polygon_area.argtypes = [POINTER(c_double), POINTER(c_double), c_int]
    G_ellipsoid_polygon_area.restype = c_double

# include/grass/defs/gis.h: 119
if _libs["grass_gis.8.5"].has("G_planimetric_polygon_area", "cdecl"):
    G_planimetric_polygon_area = _libs["grass_gis.8.5"].get(
        "G_planimetric_polygon_area", "cdecl"
    )
    G_planimetric_polygon_area.argtypes = [POINTER(c_double), POINTER(c_double), c_int]
    G_planimetric_polygon_area.restype = c_double

# include/grass/defs/gis.h: 122
if _libs["grass_gis.8.5"].has("G_begin_zone_area_on_sphere", "cdecl"):
    G_begin_zone_area_on_sphere = _libs["grass_gis.8.5"].get(
        "G_begin_zone_area_on_sphere", "cdecl"
    )
    G_begin_zone_area_on_sphere.argtypes = [c_double, c_double]
    G_begin_zone_area_on_sphere.restype = None

# include/grass/defs/gis.h: 123
if _libs["grass_gis.8.5"].has("G_darea0_on_sphere", "cdecl"):
    G_darea0_on_sphere = _libs["grass_gis.8.5"].get("G_darea0_on_sphere", "cdecl")
    G_darea0_on_sphere.argtypes = [c_double]
    G_darea0_on_sphere.restype = c_double

# include/grass/defs/gis.h: 124
if _libs["grass_gis.8.5"].has("G_area_for_zone_on_sphere", "cdecl"):
    G_area_for_zone_on_sphere = _libs["grass_gis.8.5"].get(
        "G_area_for_zone_on_sphere", "cdecl"
    )
    G_area_for_zone_on_sphere.argtypes = [c_double, c_double]
    G_area_for_zone_on_sphere.restype = c_double

# include/grass/defs/gis.h: 127
if _libs["grass_gis.8.5"].has("G_ascii_check", "cdecl"):
    G_ascii_check = _libs["grass_gis.8.5"].get("G_ascii_check", "cdecl")
    G_ascii_check.argtypes = [String]
    G_ascii_check.restype = None

# include/grass/defs/gis.h: 138
if _libs["grass_gis.8.5"].has("G_vasprintf", "cdecl"):
    G_vasprintf = _libs["grass_gis.8.5"].get("G_vasprintf", "cdecl")
    G_vasprintf.argtypes = [POINTER(POINTER(c_char)), String, c_void_p]
    G_vasprintf.restype = c_int

# include/grass/defs/gis.h: 139
if _libs["grass_gis.8.5"].has("G_asprintf", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_asprintf", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [POINTER(POINTER(c_char)), String]
    G_asprintf = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 142
if _libs["grass_gis.8.5"].has("G_rasprintf", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_rasprintf", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [POINTER(POINTER(c_char)), POINTER(c_size_t), String]
    G_rasprintf = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 146
if _libs["grass_gis.8.5"].has("G_aprintf", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_aprintf", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [String]
    G_aprintf = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 147
if _libs["grass_gis.8.5"].has("G_faprintf", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_faprintf", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [POINTER(FILE), String]
    G_faprintf = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 148
if _libs["grass_gis.8.5"].has("G_saprintf", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_saprintf", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [String, String]
    G_saprintf = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 149
if _libs["grass_gis.8.5"].has("G_snaprintf", "cdecl"):
    _func = _libs["grass_gis.8.5"].get("G_snaprintf", "cdecl")
    _restype = c_int
    _errcheck = None
    _argtypes = [String, c_size_t, String]
    G_snaprintf = _variadic_function(_func, _restype, _argtypes, _errcheck)

# include/grass/defs/gis.h: 150
if _libs["grass_gis.8.5"].has("G_vaprintf", "cdecl"):
    G_vaprintf = _libs["grass_gis.8.5"].get("G_vaprintf", "cdecl")
    G_vaprintf.argtypes = [String, c_void_p]
    G_vaprintf.restype = c_int

# include/grass/defs/gis.h: 151
if _libs["grass_gis.8.5"].has("G_vfaprintf", "cdecl"):
    G_vfaprintf = _libs["grass_gis.8.5"].get("G_vfaprintf", "cdecl")
    G_vfaprintf.argtypes = [POINTER(FILE), String, c_void_p]
    G_vfaprintf.restype = c_int

# include/grass/defs/gis.h: 152
if _libs["grass_gis.8.5"].has("G_vsaprintf", "cdecl"):
    G_vsaprintf = _libs["grass_gis.8.5"].get("G_vsaprintf", "cdecl")
    G_vsaprintf.argtypes = [String, String, c_void_p]
    G_vsaprintf.restype = c_int

# include/grass/defs/gis.h: 153
if _libs["grass_gis.8.5"].has("G_vsnaprintf", "cdecl"):
    G_vsnaprintf = _libs["grass_gis.8.5"].get("G_vsnaprintf", "cdecl")
    G_vsnaprintf.argtypes = [String, c_size_t, String, c_void_p]
    G_vsnaprintf.restype = c_int

# include/grass/defs/gis.h: 156
if _libs["grass_gis.8.5"].has("G_strlcat", "cdecl"):
    G_strlcat = _libs["grass_gis.8.5"].get("G_strlcat", "cdecl")
    G_strlcat.argtypes = [String, String, c_size_t]
    G_strlcat.restype = c_size_t

# include/grass/defs/gis.h: 159
if _libs["grass_gis.8.5"].has("G_strlcpy", "cdecl"):
    G_strlcpy = _libs["grass_gis.8.5"].get("G_strlcpy", "cdecl")
    G_strlcpy.argtypes = [String, String, c_size_t]
    G_strlcpy.restype = c_size_t

# include/grass/defs/gis.h: 162
if _libs["grass_gis.8.5"].has("G_basename", "cdecl"):
    G_basename = _libs["grass_gis.8.5"].get("G_basename", "cdecl")
    G_basename.argtypes = [String, String]
    if sizeof(c_int) == sizeof(c_void_p):
        G_basename.restype = ReturnString
    else:
        G_basename.restype = String
        G_basename.errcheck = ReturnString

# include/grass/defs/gis.h: 163
if _libs["grass_gis.8.5"].has("G_get_num_decimals", "cdecl"):
    G_get_num_decimals = _libs["grass_gis.8.5"].get("G_get_num_decimals", "cdecl")
    G_get_num_decimals.argtypes = [String]
    G_get_num_decimals.restype = c_size_t

# include/grass/defs/gis.h: 164
if _libs["grass_gis.8.5"].has("G_double_to_basename_format", "cdecl"):
    G_double_to_basename_format = _libs["grass_gis.8.5"].get(
        "G_double_to_basename_format", "cdecl"
    )
    G_double_to_basename_format.argtypes = [c_double, c_size_t, c_size_t]
    if sizeof(c_int) == sizeof(c_void_p):
        G_double_to_basename_format.restype = ReturnString
    else:
        G_double_to_basename_format.restype = String
        G_double_to_basename_format.errcheck = ReturnString

# include/grass/defs/gis.h: 165
if _libs["grass_gis.8.5"].has("G_get_basename_separator", "cdecl"):
    G_get_basename_separator = _libs["grass_gis.8.5"].get(
        "G_get_basename_separator", "cdecl"
    )
    G_get_basename_separator.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_get_basename_separator.restype = ReturnString
    else:
        G_get_basename_separator.restype = String
        G_get_basename_separator.errcheck = ReturnString

# include/grass/defs/gis.h: 166
if _libs["grass_gis.8.5"].has("G_join_basename_strings", "cdecl"):
    G_join_basename_strings = _libs["grass_gis.8.5"].get(
        "G_join_basename_strings", "cdecl"
    )
    G_join_basename_strings.argtypes = [POINTER(POINTER(c_char)), c_size_t]
    if sizeof(c_int) == sizeof(c_void_p):
        G_join_basename_strings.restype = ReturnString
    else:
        G_join_basename_strings.restype = String
        G_join_basename_strings.errcheck = ReturnString

# include/grass/defs/gis.h: 167
if _libs["grass_gis.8.5"].has("G_generate_basename", "cdecl"):
    G_generate_basename = _libs["grass_gis.8.5"].get("G_generate_basename", "cdecl")
    G_generate_basename.argtypes = [String, c_double, c_size_t, c_size_t]
    if sizeof(c_int) == sizeof(c_void_p):
        G_generate_basename.restype = ReturnString
    else:
        G_generate_basename.restype = String
        G_generate_basename.errcheck = ReturnString

# include/grass/defs/gis.h: 170
if _libs["grass_gis.8.5"].has("G_bresenham_line", "cdecl"):
    G_bresenham_line = _libs["grass_gis.8.5"].get("G_bresenham_line", "cdecl")
    G_bresenham_line.argtypes = [
        c_int,
        c_int,
        c_int,
        c_int,
        CFUNCTYPE(UNCHECKED(c_int), c_int, c_int),
    ]
    G_bresenham_line.restype = None

# include/grass/defs/gis.h: 173
if _libs["grass_gis.8.5"].has("G_clicker", "cdecl"):
    G_clicker = _libs["grass_gis.8.5"].get("G_clicker", "cdecl")
    G_clicker.argtypes = []
    G_clicker.restype = None

# include/grass/defs/gis.h: 176
if _libs["grass_gis.8.5"].has("G_color_rules_options", "cdecl"):
    G_color_rules_options = _libs["grass_gis.8.5"].get("G_color_rules_options", "cdecl")
    G_color_rules_options.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_color_rules_options.restype = ReturnString
    else:
        G_color_rules_options.restype = String
        G_color_rules_options.errcheck = ReturnString

# include/grass/defs/gis.h: 177
if _libs["grass_gis.8.5"].has("G_color_rules_descriptions", "cdecl"):
    G_color_rules_descriptions = _libs["grass_gis.8.5"].get(
        "G_color_rules_descriptions", "cdecl"
    )
    G_color_rules_descriptions.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_color_rules_descriptions.restype = ReturnString
    else:
        G_color_rules_descriptions.restype = String
        G_color_rules_descriptions.errcheck = ReturnString

# include/grass/defs/gis.h: 178
if _libs["grass_gis.8.5"].has("G_color_rules_description_type", "cdecl"):
    G_color_rules_description_type = _libs["grass_gis.8.5"].get(
        "G_color_rules_description_type", "cdecl"
    )
    G_color_rules_description_type.argtypes = []
    if sizeof(c_int) == sizeof(c_void_p):
        G_color_rules_description_type.restype = ReturnString
    else:
        G_color_rules_description_type.restype = String
        G_color_rules_description_type.errcheck = ReturnString

# include/grass/defs/gis.h: 179
if _libs["grass_gis.8.5"].has("G_list_color_rules", "cdecl"):
    G_list_color_rules = _libs["grass_gis.8.5"].get("G_list_color_rules", "cdecl")
    G_list_color_rules.argtypes = [POINTER(FILE)]
    G_list_color_rules.restype = None
